--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,88 @@
     <title>Practice Day one</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gulzar&family=Montserrat:wght@500;600&family=Poppins&family=Ubuntu:ital,wght@0,500;1,400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Gulzar&family=Montserrat:wght@500;600&family=Poppins&family=Ubuntu:ital,wght@0,500;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <section>
-        <div>
-            <h1><span class="text-color">Skip</span> The Diet,<br> 
+    <section class="flexiable">
+        <div class="half-width">
+            <h1><span class="text-color">Skip</span> The Diet,<br>
 
                 Just Eat Healthy <br>
-                
-                With Food Network</h1>
-                <p>Imagine you don't need a diet because we provide 
 
-                    healthy and delicious food for you</p>
-                    <a target="_blank" class="link-btn"  href="https://www.google.com">Order food</a>
+                With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide
+
+                healthy and delicious food for you</p>
+            <a target="_blank" class="link-btn" href="https://www.google.com">Order food</a>
+        </div>
+        <div class="half-width">
+            <img src="images/profile1.png" alt="">
+        </div>
+    </section>
+    <section class="shapes flexiable">
+        <div class="half-width">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class=" about half-width">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel</p>
+            <a target="_blank" class="link-btn" href="https://www.youtube.com"> Contract</a>
+        </div>
+    </section>
+    <section class="reciepes-area">
+        <div class="recipes">
+            <h3>My recipies</h3>
+            <p class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the
+                1500s</p>
+        </div>
+    </section>
+    <section class="flexiable">
+        <div class="Recipie-item">
+            <img src="images/food/Project Cover.jpg" alt="">
+            <h2>Recipie Title</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s.</p>
+
+        </div>
+        <div class="Recipie-item">
+            <img src="images/food/Project Cover1.jpg" alt="">
+            <h2>Recipie Title</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry. Lorem Ipsum has been the industry's
+                standard dummy text ever since the 1500s</p>
+
+        </div>
+    </section>
+    <section class="subscriber-area">
+        <div class="third-half">
+            <h1>700k</h1>
+            <p>Youtube Subscriber</p>
+        </div>
+        <div class="third-half">
+            <h1>2.4m</h1>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="third-half">
+            <h1>100k</h1>
+            <p>Dribbble Shot Likes</p>
         </div>
     </section>
 </body>
+<footer class="footer-last">
+    <h2 class="color"><span class="text-color">Eat</span> Fresh</h2>
+    <p class="font">Eat healthy to live healthy. Live healthy to live happy</p>
+
+</footer>
+
 </html>
