--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
     <section class="shapes flexiable">
         <div class="half-width">
-            <img src="images/female/Person Image.png" alt="">
+            <img class="female-img" src="images/female/Person Image.png" alt="">
         </div>
         <div class=" about half-width">
             <h2>About Me</h2>
